--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "pro-puesto-de-salud",
   "version": "1.0.0",
-  "description": "Sistema de gestión para puesto de salud",
-  "main": "index.js",
+  "private": true,
   "workspaces": [
     "frontend",
     "backend"
   ],
   "scripts": {
     "dev": "concurrently \"npm run dev --workspace=frontend\" \"npm run dev --workspace=backend\"",
-    "dev:backend": "npm run dev --workspace=backend",
     "dev:frontend": "npm run dev --workspace=frontend",
+    "dev:backend": "npm run dev --workspace=backend",
     "install:all": "npm install"
   },
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  },
   "dependencies": {
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "react-hook-form": "^7.62.0",
     "react-toastify": "^11.0.5"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
