--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "install:all": "npm install"
   },
   "dependencies": {
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "bcrypt": "^6.0.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
     "react-toastify": "^11.0.5"
   },
