--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
